# fix-rs

./: Cargo.toml
examples/: server.rs
fix-rs-macros/: Cargo.toml
fix-rs-macros/src/: lib.rs
src/: field.rs  field_type.rs  fix.rs  fix_version.rs  lib.rs  message.rs  network_read_retry.rs  rule.rs
src/dictionary/: fields.rs  messages.rs  mod.rs
src/dictionary/field_types/: generic.rs  macros.rs  other.rs
src/fixt/: engine.rs  engine_thread.rs  message.rs
tests/: client.rs  fixt.rs  parser.rs  server.rs
tests/common/: mod.rs
